# inferrs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
backends/inferrs-backend-hexagon/: Cargo.toml
backends/inferrs-backend-hexagon/src/: fastrpc.rs  lib.rs  libdl.rs
candle-core/examples/: bench_flash_attn_prefill.rs
candle-core/src/: cuda_flash_attn.rs  cuda_linear_attn_scan.rs
candle-core/tests/: quantized_tests.rs
candle-kernels/: build.rs
candle-metal-kernels/: Cargo.toml
candle-metal-kernels/src/: lib.rs  scaled_dot_product_attention.metal
candle-nn/: .cargo_vcs_info.json  Cargo.toml
candle-nn/src/: linear.rs  ops.rs
inferrs/: Cargo.toml  build.rs
inferrs-benchmark/src/: main.rs
inferrs-models/: Cargo.toml
inferrs-models/src/: config.rs  gptq.rs
inferrs-multimodal/src/: ffi.rs  vision_encoder.rs
inferrs/src/: backend.rs  bench.rs  config.rs  engine.rs  hub.rs  list.rs  main.rs  modelpack.rs  pull.rs  quantize.rs  rm.rs  run.rs  sampler.rs  server.rs  tokenizer.rs  turbo_quant.rs  util.rs
inferrs/tests/: cli.rs  server_integration.rs
inferrs/ui/: index.html
oci-models/: common.go  lib.go  main.go
oci-pull/: go.mod  go.sum  main.go
scripts/: benchmark.sh
src/: bench.rs  config.rs  engine.rs  main.rs  run.rs  server.rs  tokenizer.rs  turbo_quant.rs
src/buffer/: mod.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/engine/: mod.rs
src/model/: loader.rs  mod.rs  transformer.rs
src/models/: attention_utils.rs  mod.rs  qwen3.rs  qwen3_5.rs
tests/: compare_ollama.sh
(+40 files in other folders)
